--- a/envia01.html
+++ b/envia01.html
@@ -53,7 +53,7 @@
   <script>
     function enviarTemperatura() {
       const temperatura = (Math.random() * (40 - 10) + 10).toFixed(1); // Simula entre 10.0°C y 40.0°C
-      const url = "https://lasemillaonline.github.io/temperatura/recibir_datos.php";
+      const url = "http://lasemillaonline.github.io/temperatura/recibir_datos.php";
       
       fetch(url, {
         method: "POST",
